# Tree-plus-plus

./: .gitignore  Makefile  README.md  tree.sh  tt  xmake.lua
.github/workflows/: build.yml  release.yml
cpp/: Makefile  xmake.lua
cpp/inc/: Controller.hpp  Exception.hpp  FileDirInfos.hpp  Options.hpp  SizeUnit.hpp  args.hpp  displayer.hpp  displayers.hpp  file_dir_infos.hpp  main.hpp  size_unit.hpp  tree.hpp  utils.hpp
cpp/include/: args.hpp  displayer.hpp  file_dir_infos.hpp  fs_utils.hpp  main.hpp  size_unit.hpp  tree.hpp  utils.hpp
cpp/src/: FileDirInfos.cpp  SizeUnit.cpp  args.cpp  controller.cpp  displayer.cpp  file_dir_infos.cpp  fs_utils.cpp  main.cpp  options.cpp  size_unit.cpp  tree.cpp  utils.cpp
go/: Makefile
inc/: Controller.hpp  Displayer.hpp  Exception.hpp  FileDirInfos.hpp  Options.hpp  SizeUnit.hpp  SizeWrapper.hpp  Utils.hpp  args.hpp  tree.hpp  utils.hpp
inc/displayers_specs/: Filter.hpp  Formatter.hpp  Indenter.hpp
inc/filters/: Default.hpp  Extensions.hpp  Files.hpp  Hidden.hpp
inc/formatters/: Full_infos.hpp  Name_only.hpp
inc/indenters/: Fancy.hpp  Space.hpp
inc/size/: base.hpp  size.hpp  (+6 more)
include/: args.hpp  tree.hpp  utils.hpp
other-implementations/rust-tree-plus-plus/: Cargo.toml  rustfmt.toml
other-implementations/rust-tree-plus-plus/src/: main.rs  options.rs
other-implementations/rust-tree-plus-plus/src/file_dir_infos/: dir_infos.rs  file_infos.rs  item_infos.rs  items_count.rs  mod.rs
src/: Controller.cpp  Displayer.cpp  FileDirInfos.cpp  Options.cpp  args.cpp  main.cpp  size.cpp  tree.cpp  utils.cpp
v/: Makefile
(+34 files in other folders)
