[package]
name = "rust-tree-plus-plus"
version = "1.0.0"
authors = ["vic1707 <28602203+vic1707@users.noreply.github.com>"] 
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }

[package.metadata.rustfmt]
max_width = 120
hard_tabs = false
tab_spaces = 2
newline_style = "Unix"
use_small_heuristics = "Default"
reorder_imports = true
reorder_modules = true
remove_nested_parens = true
edition = "2021"
merge_derives = true
use_try_shorthand = false
use_field_init_shorthand = true
force_explicit_abi = true

## nightly channel only
# normalize_comments = true
# normalize_doc_attributes = true
# wrap_comments = true
# format_code_in_doc_comments = true
# comment_width = 120 # same as max_width
# format_strings = true
# imports_granularity = "Module"
# group_imports = "StdExternalCrate"
# reorder_impl_items = true
# condense_wildcard_suffixes = true
