[package]
name = "rust-tree-plus-plus"
version = "1.0.0"
authors = ["vic1707 <28602203+vic1707@users.noreply.github.com>"] 
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.2.21", features = ["derive"] }
size = "0.4"
